--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-tsx-views": "^2.0.0-beta.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sanitize-filename": "^1.6.3"
   },
   "devDependencies": {
