--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "rootDir": "./src",
     "strict": true,
     "module": "commonjs",
+    "jsx": "react",
     "esModuleInterop": true,
     "target": "ES6",
     "moduleResolution": "Node"
